New in release 0.96 (XXX XX, 2006)

  * Handle Miranda-methods properly.
  * try-catch line number problem with jikes fixed.
  * Added support for libjvm.so.
  * Stripped down object code size of code generators.


New in release 0.95 (February 13, 2006)

  * Dead-lock bugfix.  This should fix the random dead-locks seen in
    Eclipse or other applications.
  * Search for suitable jar program during configure, can be specified
    via JAR environment variable
  * --enable-zlib bugfix
  * i386 bugfix: Set FPU to 64-bit on VM startup (fixes Debian bug
    #350729)
  * powerpc bugfix: (M_COPY): Handle longs and doubles properly.
  * Fixed instructions copying stackslots (like DUP_X1).
  * Fixed classcache-related problem with java.lang.reflect.Proxy.
  * Throw correct exception when trying to load a directory
    as a classfile (from a .zip file).
  * Fixed incorrect method resolution when calling instance methods 
    through JNI (fixes CACAO bugs #17 and #18).


New in release 0.94 (January 22, 2006)

  * support compilation of Interpreter and JIT compiler into one binary (not
    enabled by default)
  * bootstrap ZIP code rewrite (VM startup time improvement)
  * fixed JNI DirectByteBuffer functions, jogl works now
  * removed most third-party files from the repository, we link to the
    libraries instead
  * removed VM interface Java files which were identical to the GNU
    Classpath upstream version
  * added defineClassWithTransformers to java.lang.VMClassLoader, now we are
    able to build against the generics branch
  * Java compiler which should be used during compilation can be specified
    via JAVAC environment variable
  * a lot of bugfixes


New in release 0.93 (November 23, 2005)

  * Java 1.5 support
  * JIT codegenerators for Arm and MIPS (32-bit, -o32), currently
    closed-source
  * integration of a vmgen-based interpreter (--enable-intrp)
  * removal of GNU classpath, CACAO now uses upstream releases or CVS
    head versions